fixed error in tickets alignment

--- a/app/assets/stylesheets/nodes.scss
+++ b/app/assets/stylesheets/nodes.scss
@@ -532,6 +532,7 @@ div[name="button--undo"] {
   text-align: center;
   position: absolute;
   padding: 6px;
+  left: 12px;
 }
 
 .nodes__tickets div[name="multi--hover"]:hover + div[name="multi--list"],
